2004-10-17  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/wizard.py:
	* flumotion/wizard/wizard_step.py:

	Make it possible to go back to major steps. Fixes quite a few bugs.
	Beginning of cleanup for the WizardStep API.
	
2004-10-17  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_overlay.glade:
	* flumotion/wizard/save.py:
	* flumotion/wizard/wizard_step.py:

	Fixes to overlay component, it should only show a text if chose to
	include one in the wizard.
	
2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	  clean up todo, some things are already done, yay

2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/planet.xml:
	* flumotion/common/config.py:
	* flumotion/manager/worker.py:
	* flumotion/test/test_config.py:
	* flumotion/wizard/wizard.py:
	* flumotion/wizard/wizard_step.py:
	  grid to flow

2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/planet.xml:
	  use htpasswdcrypt bouncer for manager and streamer
	* flumotion/component/http/http_resources.py:
	  use KeycarUACPP instead of deprecated HTTPClientKeycard
	* flumotion/component/bouncers/htpasswdcrypt.py:
	  return a random-ish salt when the username is not in the
	  backend to pretend everything's fine
	* flumotion/component/component.py:
	  switch from reconnecting client factory to new FPBClientFactory
	* flumotion/twisted/portal.py:
	  add new BouncerPortal wrapping an IRealm and a Bouncer
	* flumotion/twisted/pb.py:
	  add new FPB Client and Server Factories
	* flumotion/test/test_pb.py:
	  added
	* flumotion/admin/gtk/client.py:
	  change password option to -d, pass on options to model
	  for keycard
	* flumotion/admin/admin.py:
	  use FPBClientFactory
	  log in with an actual keycard, using Challenge/Response, yay !
	* flumotion/common/keycards.py:
	  set unjellyable, change repr
	* flumotion/worker/worker.py:
	  use FPBClientFactory
	* flumotion/worker/job.py: