@@ -1,5 +1,8 @@
 2004-10-17  Johan Dahlin  <johan@gnome.org>
 
+	* flumotion/wizard/steps.py: Rename from wizard_step to make
+	thomas happy
+
 	* flumotion/wizard/wizard.py:
 	* flumotion/wizard/wizard_step.py:
 
